--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   },
   "dependencies": {
     "astro": "^1.7.1"
+  },
+  "devDependencies": {
+    "@astrojs/react": "^1.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
